[package]
name = "digibyte-rpc"
version = "0.13.3"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>"
]
license = "CC0-1.0"
homepage = "https://github.com/digibytecontributer/rust-digibyte-rpc/"
repository = "https://github.com/digibytecontributer/rust-digibyte-rpc/"
description = "RPC client library for the DigiByte Core JSON-RPC API."
keywords = [ "crypto", "digibyte", "rpc" ]
readme = "README.md"

[lib]
name = "digibyte_rpc"
path = "src/lib.rs"

[dependencies]
digibyte-rpc-json = { version = "0.13.3", path = "../json"}

log = "0.4.5"
jsonrpc = "0.11"

# Used for deserialization of JSON.
serde = "1"
serde_json = "1"
